# Fritz.CallMonitor

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.forgejo/workflows/: release.yml
.github/workflows/: release.yml
docs/: ideas.md  improvements.md
packaging/: entry_point.py  fritz_callhistory.spec
scripts/: changelog_section.sh  check_connection.py
src/fritz_callhistory/: __init__.py  app.py  config.py  credentials.py  paths.py
src/fritz_callhistory/db/: connection.py  repository.py  schema.py
src/fritz_callhistory/fritz/: callmonitor.py  client.py  exceptions.py
src/fritz_callhistory/gui/: all_calls_view.py  callmonitor_worker.py  calls_tab.py  contact_detail.py  contact_edit_dialog.py  contacts_view.py  credentials_dialog.py  icon.py  incoming_call_popup.py  main_window.py  models.py  phonebook_picker_dialog.py  phonebook_view.py  settings_dialog.py  voicemail_view.py  workers.py
src/fritz_callhistory/sync/: normalize.py  phonebook_io.py  service.py
tests/: conftest.py  test_all_calls_view.py  test_app.py  test_callmonitor.py  test_callmonitor_worker.py  test_calls_tab.py  test_config.py  test_contact_detail.py  test_contact_edit_dialog.py  test_contacts_view.py  test_credentials.py  test_credentials_dialog.py  test_db_repository.py  test_fritz_client.py  test_incoming_call_popup.py  test_main_window.py  test_models.py  test_normalize.py  test_phonebook_io.py  test_phonebook_picker_dialog.py  test_phonebook_view.py  test_settings_dialog.py  test_sync_service.py  test_voicemail_view.py  test_workers.py
(+7 files in other folders)
