[project]
name = "fritz-callhistory"
version = "0.8.0"
description = "Durchsuchbare Anrufliste und Kontakt-Historie für die AVM Fritz!Box"
readme = "README.md"
authors = [
    { name = "jonny1797", email = "jonnys.kiste@web.de" }
]
requires-python = ">=3.12"
dependencies = [
    "fritzconnection>=1.15.1",
    "keyring>=25.7.0",
    "phonenumbers>=9.0.33",
    "platformdirs>=4.10.0",
    "pyside6>=6.11.1",
    "tomli-w>=1.2.0",
]

[project.scripts]
fritz-callhistory = "fritz_callhistory.app:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
